[gd_scene load_steps=17 format=2]

[ext_resource path="res://Interface/healthBar/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://Interface/healthBar/bg.png" type="Texture" id=2]
[ext_resource path="res://Interface/healthBar/fill.png" type="Texture" id=3]
[ext_resource path="res://Interface/healthBar/bg_3.png" type="Texture" id=4]
[ext_resource path="res://Interface/healthBar/fill_3.png" type="Texture" id=5]
[ext_resource path="res://Interface/Hud/Keyboard_keys/q.png" type="Texture" id=6]
[ext_resource path="res://Interface/Hud/Keyboard_keys/2.png" type="Texture" id=7]
[ext_resource path="res://Interface/Hud/Keyboard_keys/4.png" type="Texture" id=8]
[ext_resource path="res://Interface/Hud/Keyboard_keys/1.png" type="Texture" id=9]
[ext_resource path="res://Interface/Hud/Keyboard_keys/3.png" type="Texture" id=10]
[ext_resource path="res://Interface/Hud/Keyboard_keys/mouse2.png" type="Texture" id=11]
[ext_resource path="res://Interface/Hud/Keyboard_keys/mouse.png" type="Texture" id=12]
[ext_resource path="res://sound/sfx/ui/low_health_alert.wav" type="AudioStream" id=13]
[ext_resource path="res://Interface/Hud/Keyboard_keys/exclamation.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
resource_name = "needs_healing"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../HealthBar/alert:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.803922, 0.952941, 0.345098 ), Color( 1, 0.803922, 0.952941, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 15.0, 0.0, -15.0, 0.0, 15.0, 0.0, -15.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../exclamation:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.627451 ), Color( 1, 1, 1, 0.105882 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -195.003
margin_top = -53.0
margin_right = 200.997
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sfx_player" type="AudioStreamPlayer" parent="HealthBar" groups=[
"sfx_player",
]]
stream = ExtResource( 13 )

[node name="alert" type="Sprite" parent="HealthBar"]
visible = false
modulate = Color( 1, 0.803922, 0.952941, 0.00694233 )
position = Vector2( 197.82, 26.4387 )
texture = ExtResource( 3 )

[node name="HealCharges" type="TextureProgress" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -590.888
margin_top = -53.0
margin_right = -396.888
max_value = 3.0
value = 1.0
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="HealCharges"]
position = Vector2( -28.9612, 20.4916 )
rotation = 0.240733
scale = Vector2( 0.817773, 0.817773 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HealCharges/Sprite"]
anims/needs_healing = SubResource( 1 )

[node name="exclamation" type="Sprite" parent="HealCharges"]
visible = false
modulate = Color( 1, 1, 1, 0.116375 )
position = Vector2( -30.0195, -70.2063 )
scale = Vector2( 0.340252, 0.340252 )
texture = ExtResource( 14 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -678.561
margin_top = -724.806
margin_right = -674.561
margin_bottom = -720.806
border_color = Color( 1, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="ReferenceRect"]
position = Vector2( -1.88773, -30.204 )
scale = Vector2( 0.726681, 0.726681 )

[node name="1" type="Sprite" parent="ReferenceRect/Node2D"]
position = Vector2( 62.508, 50 )
texture = ExtResource( 9 )

[node name="2" type="Sprite" parent="ReferenceRect/Node2D"]
position = Vector2( 151.57, 50 )
texture = ExtResource( 7 )

[node name="3" type="Sprite" parent="ReferenceRect/Node2D"]
position = Vector2( 241.658, 50 )
texture = ExtResource( 10 )

[node name="4" type="Sprite" parent="ReferenceRect/Node2D"]
position = Vector2( 332.435, 50 )
texture = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="ReferenceRect/Node2D"]
visible = false
position = Vector2( 422.144, 58.4757 )
frames = SubResource( 2 )
speed_scale = 0.5
playing = true
